--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
 
@@ -20,4 +19,13 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    sdk = 24
+    buildTools = "24.0.3"
+    minSdk = 17
+    libraryVersion = "1.0.0"
+    libraryVersionCode = 1
+    supportVersion = "24.2.1"
 }
