new call receiver structure

--- a/callrecord/src/main/AndroidManifest.xml
+++ b/callrecord/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
             android:name=".service.CallRecordService"
             android:exported="true" />
 
+        <!--
+        <receiver android:name=".CallReceiver" >
+        <action android:name="android.intent.action.PHONE_STATE" />
+        <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+        </receiver>
+        -->
+
         <!--<receiver android:name=".receiver.CallRecordReceiver">-->
         <!--<intent-filter>-->
         <!--<action android:name="android.intent.action.PHONE_STATE" />-->
