--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
@@ -14,6 +12,15 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        mavenLocal()
+        maven { url "https://clojars.org/repo/" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/android/android-tools" }
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jcenter.bintray.com" }
+        google()
     }
 }
 
@@ -22,10 +29,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    sdk = 25
-    buildTools = "25.0.3"
+    sdk = 27
     minSdk = 17
-    libraryVersion = "1.2.4"
-    libraryVersionCode = 16
-    supportVersion = "25.3.1"
+    libraryVersion = "1.2.5"
+    libraryVersionCode = 17
+    supportVersion = "27.0.1"
 }
