--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
+android.useAndroidX=true
+android.enableJetifier=true
