--- a/callrecord/build.gradle
+++ b/callrecord/build.gradle
@@ -29,40 +29,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
-
-
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'CallRecord'
-    orgName = 'aykuttasil'
-
-    publishedGroupId = 'com.aykuttasil'
-    libraryName = 'CallRecord'
-    artifact = 'callrecord' // module ile aynı isimde olması gerekiyor
-
-    libraryDescription = 'Call Record'
-
-    siteUrl = 'https://github.com/aykuttasil/CallRecorder'
-    gitUrl = 'https://github.com/aykuttasil/CallRecorder.git'
-
-    libraryVersion = rootProject.ext.libraryVersion
-
-    developerId = 'aykuttasil'
-    developerName = 'Aykut Asil'
-    developerEmail = 'aykuttasil@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
-if (project.rootProject.file('local.properties').exists()) {
-    apply from: rootProject.file('gradle/install-v1.gradle')
-    apply from: rootProject.file('gradle/bintray-android-v1.gradle')
-}
-repositories {
-    mavenCentral()
-}
-
-// ./gradlew clean install bintrayUpload
